--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Cookbook</title>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"> -->
     <link rel="stylesheet" href="/static/site.css">
     <link rel="stylesheet" href="/static/recipe.css">
     <link rel="stylesheet" href="/static/form.css">
     <link rel="stylesheet" href="/static/comments.css">
+    <link rel="stylesheet" href="/static/spinner.css">
     <script src="/src/app.js" type="module"></script>
 </head>
 
@@ -31,7 +30,16 @@
         </nav>
     </header>
 
-    <div id="spinner">Loading...</div>
+    <div class="lds-roller">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 
     <main id="root">
 
